css: posts fix username wrapping

--- a/project/src/main/resources/static/css/posts.css
+++ b/project/src/main/resources/static/css/posts.css
@@ -11,7 +11,7 @@
 }
 
 #posts.parentPosts .post {
-    width: 300px;
+    width: 340px;
     height: 300px;
     display: inline-block;
     border: 1px solid var(--var-color-border-transwhite);
@@ -116,11 +116,16 @@
     display: inline-flex;
     text-decoration: none;
     color: var(--var-color-fg-post-username);
-    overflow-wrap: break-word;
-    word-break: break-word;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-weight: 700;
     font-family: sans-serif;
     font-size: small;
+}
+
+#posts.parentPosts .post_account_userName {
+    max-width: 70px;
 }
 
 .post_title {
